--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div class="col-sm-4 mb-4">
         <a href="#"><i class="fas fa-database fa-10x text-info"></i></a>
-        <h4 class="mt-4">Database</h4>
+        <h4 class="mt-4">DataBase</h4>
       </div>
     </div>
   </div> <!-- End Services -->
